base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: orders
  labels:
    app.kubernetes.io/part-of: orders
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: thegoodcorner-orders
    app.openshift.io/runtime: quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: image-registry.openshift-image-registry.svc:5000/thegoodcorner-dev/orders:latest
          ports:
            - name: http-8080
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: '300Mi'
              cpu: '300m'
