base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: orders
  labels:
    app: orders
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: thegoodcorner-orders
spec:
  to:
    kind: Service
    name: orders
    weight: 100
  port:
    targetPort: http-8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
